<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFB"
    android:orientation="vertical"
    tools:context=".RestaurantMapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_distance" />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="93dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/_0_km"
            android:textColor="#00103F" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/todo"
            android:padding="5dp"
            android:src="@drawable/ic_clock" />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/_0_min"
            android:textColor="#00103F" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDrawPath"
            style="@android:style/Widget.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnDrawPathOnClick"
            android:text="@string/find_path" />

        <Button
            android:id="@+id/btnloc"
            style="@android:style/Widget.Button.Small"
            android:layout_width="143dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="btnRestaurantLocation"
            android:text="@string/restaurant_location" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.restaurant_finder.RestaurantMapsActivity" />

    </LinearLayout>

</LinearLayout>
