<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:background="#E2E4E5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/resCommentUser"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:height="40sp"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/user_name_food_name"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/resCommentRatingBar"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:theme="@style/RatingBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resCommentDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_marginRight="5dp"
                android:gravity="end"
                android:text="@string/date"
                android:layout_marginEnd="5dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/resComments"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:text="@string/comments" />

</LinearLayout>