<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="#E2E4E5"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/foodImg"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".4"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".6"
        android:background="#C7C7C7"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resFoodName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:height="35sp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/food_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:typeface="monospace" />

        <RatingBar
            android:id="@+id/foodRatingBar"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:theme="@style/RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/foodDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:height="20sp"
            android:text="@string/description"
            android:textColor="#00103F" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/foodViewComment"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:height="20sp"
                android:background="@drawable/view_comment"
                android:onClick="btnFoodComment"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

            <TextView
                android:id="@+id/foodAddComment"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:height="20sp"
                android:background="@drawable/add_comment"
                android:onClick="btnAddFoodComment"
                android:textColor="@color/colorAccent"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/foodPrice"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight=".2"
        android:height="20sp"
        android:gravity="center"
        android:text="@string/price"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

</LinearLayout>

