<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8FAFB"
    tools:context=".AddComment">

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="77dp"
        android:autofillHints=""
        android:background="#EDEEF4"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:textColor="#00103F"
        android:textColorHint="#AB00103F"
        app:layout_constraintBottom_toTopOf="@+id/btnAddComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCommentType"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnAddComment"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:background="#A6DD2C00"
        android:onClick="btnAddOnclick"
        android:text="@string/comment"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/ratingBarComments" />

    <TextView
        android:id="@+id/txtDescrip"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="13dp"
        android:padding="2dp"
        android:text="@string/description"
        android:textColor="#00103F"
        app:layout_constraintBottom_toTopOf="@+id/editTextComment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCommentType"
        app:layout_constraintVertical_bias="1.0" />

    <RatingBar
        android:id="@+id/ratingBarComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:theme="@style/RatingBar"
        app:layout_constraintStart_toStartOf="@+id/editTextComment"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCancel"
        style="@android:style/Widget.DeviceDefault.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="#A6DD2C00"
        android:onClick="btnCancelOnclick"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toEndOf="@+id/btnAddComment"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarComments" />

    <TextView
        android:id="@+id/txtCommentType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/comment_type"
        android:textColor="#009688"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtDescrip"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>